# mcp-gateway

./: .coderabbit.yaml  .dockerignore  .env.example  .env.n8n.example  .eslintrc.json  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_OPERATIONS_RUNBOOK.md  Dockerfile.dribbble-mcp  Dockerfile.test  Dockerfile.tool-router  Dockerfile.translate  Dockerfile.uiforge  Dockerfile.uiforge.consolidated  FINAL_RESOLUTION_REPORT.md  FORGESPACE_CORE_IMPLEMENTATION.md  GLOBAL-INSTALLATION-COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LINTING_FIXES_SUMMARY.md  MIGRATION_SUMMARY.md  Makefile  NEXT_ACTIONS.md  NEXT_STEPS.md  NPM_PACKAGE_README.md  PHASE2-COMPLETE.md  PHASE3-COMPLETE.md  PHASE4_CLEANUP_SUMMARY.md  PHASE5_INVENTORY.md  PLAN.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_VALIDATION.md  PROJECT_CONTEXT.md  PUBLISHING.md  (+43 more)
.cursor/: COMMANDS.md  hooks.json
.cursor/hooks/: format-edited.sh  session-context.sh
.cursor/rules/: accessibility-openness.mdc  agent-rules.mdc  changelog-versioning.mdc  commit-pr-release.mdc  db-migrations.mdc  dependency-injection.mdc  documentation-first.mdc  enforcement-automation.mdc  error-handling.mdc  frontend.mdc  mcp-gateway-ci.mdc  pattern.mdc  performance-observability.mdc  pipeline-cursor-config.mdc  scripts-terminal.mdc  security-secrets.mdc  templates-examples.mdc  testing-quality.mdc  ts-js-rules.mdc
.forge/: tenant-profile.yml
.github/: IMPLEMENTATION_SUMMARY.md  LABEL_TEMPLATES.md  branch-protection.md  dependabot.yml  renovate.yml
.github/docs/: security-standards.md
.github/workflows/: ai-security-review.yml  base-ci-shared.yml  base-ci.yml  branch-protection-core.yml  branch-protection.yml  ci-base-shared.yml  ci-enhanced.yml  ci.yml  codeql.yml  container-scan.yml  dependencies.yml  docker-updates.yml  gitguardian.yml  mcp-server-check.yml  npm-release-core.yml  release-automation.yml  security-scan-shared.yml  semgrep.yml  snyk.yml  sonarcloud.yml
.husky/: pre-commit  pre-push
.serena/: project.yml
.serena/memories/: ai_specialist_training_system.md  ci_coverage_exclusion_strategy.md  code_style_conventions.md  development_workflow.md  gateway_client_patterns.md  phase_roadmap_features.md  project_overview.md  routing_performance_patterns.md  security_hardening_implementation.md  service_manager_three_state_model.md  specialist_coordinator_system.md  strategic_positioning.md  suggested_commands.md  system_architecture_overview.md  task_completion_checklist.md  test_restoration_feb_2026.md  tool_router_ai_architecture.md  virtual_server_system.md
apps/mcp-client/: package.json
apps/tool-router/: Dockerfile  pyproject.toml
apps/web-admin/: Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json  run-build.mjs  run-build.sh
config/: gateways.txt  monitoring-production.yml  security.yaml  services.yml  virtual-servers-enhanced.yml  virtual-servers.txt
config/monitoring/: alertmanager.yml  prometheus.yml
config/production/: gateways.yaml
config/prometheus/: prometheus.yml
config/shared/: package.json.template  pyproject.toml.template
data/: README.md
docker/: Dockerfile.uiforge  buildkitd.toml  minimal_gateway.py
docs/: ADMIN_UI_MANUAL_REGISTRATION.md  AI_USAGE.md  DEVELOPMENT.md  ENHANCED_CI_PIPELINE.md  MAKEFILE_GUIDE.md  MCP_STACK_CONFIGURATIONS.md  NPM_DEPLOYMENT_GUIDE.md  OLLAMA_SETUP.md  PHASE_4_REVISED.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  README.md  ROLLOUT_RESULTS.md  SPRINT_5_SUMMARY.md  TOOL_ROUTER_GUIDE.md  cicd-integration-analysis.md  forge-patterns-integration.md  roadmap.md  uiforge-patterns-assessment-report.md  uiforge-patterns-integration-checklist.md  uiforge-patterns-integration-complete.md  uiforge-patterns-integration-summary.md
docs/api/: LIFECYCLE_API.md
docs/architecture/: OVERVIEW.md  TOOL_ROUTER_GUIDE.md  VIRTUAL_SERVERS.md
docs/cli/: MCP_CLI.md
docs/configuration/: MCP_STACK_CONFIGURATIONS.md  MULTI_USER_DATABASE_CONFIG.md
docs/development/: CODERABBIT_GUIDE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LINTING_AND_FORMATTING.md  (+1 more)
dribbble_mcp/: __main__.py  health_check.py  image_analysis.py  scraper.py  screenshot.py  server.py
n8n-workflows/: 01-ci-failure-alert.json  02-security-advisory-aggregator.json  03-upstream-release-notifier.json  04-stale-pr-reminder.json  05-weekly-velocity-report.json  06-docker-health-monitor.json  verify-webhook.js
scripts/: README.md  check-docker-updates.sh  check-mcp-registry.py  cleanup-duplicate-servers.sh  config-manager.py  create-virtual-servers.py  create_jwt_token_standalone.py  cross-cloud-load-balancer.py  cursor-mcp-wrapper.sh  diagnose_python_environment.sh  docker-optimize.sh  fix-precommit.sh  gateways.txt  ide-setup.py  list-prompts.sh  list-servers.sh  mcp  mcp-wrapper.sh  migrate-architecture.sh  migrate-windsurf-to-vscode.fish  migrate-windsurf-to-vscode.py  multi-cloud-manager.py  refresh-cursor-jwt.sh  register-gateways.sh  release.py  setup-forge-space-mcp.sh  setup-npm-deployment.sh  setup-wizard.py  status.py  test_environment.sh  test_rag_with_docker.sh  use-cursor-wrapper.sh  validate-production-readiness.sh  validate_project.sh  validate_rag_implementation.sh  verify-cursor-setup.sh  virtual-server-manager.py  virtual-servers.txt
sentry/: .env.example  README.md  docker-compose.yml  nginx.conf  setup.sh
service-manager/: Dockerfile  requirements.txt  service_manager.py  service_manager_simple.py
src/: index.ts
tests/: test_dockerfiles.py  test_github_workflows.py  test_ide_setup.py  test_makefile_targets.py  test_manage_servers.py  test_rag_manager.py  test_scalable_architecture.py  test_security.py  test_specialist_integration.py
tool_router/: __main__.py  args.py  enhanced_specialist_coordinator.py  gateway_client.py  http_server.py  scoring.py  sentry_integration.py  sentry_integration_shared.py  server.py  simple_server.py  specialist_coordinator.py  test_args.py  test_gateway_client.py  test_scoring.py  test_server.py
(+358 files in other folders)
