[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gateway"
version = "1.7.0"
description = "Self-hosted MCP gateway (Context Forge) with tool-router"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "beautifulsoup4",
    "bleach>=6.0.0",
    "cachetools>=5.0.0",
    "httpx",
    "lxml",
    "Pillow",
    "playwright",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "structlog>=23.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "psutil>=5.9.0",
    "pytest-benchmark>=4.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tool_router/tests", "dribbble_mcp/tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=tool_router --cov=dribbble_mcp --cov-report=xml --cov-report=html --cov-report=term-missing --cov-fail-under=1"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "sleep_wake: marks tests related to sleep/wake functionality",
    "resource_monitoring: marks tests related to resource monitoring",
    "wake_prediction: marks tests related to wake prediction",
    "priority_management: marks tests related to priority management",
    "api_endpoints: marks tests related to API endpoints",
    "memory_optimization: marks tests related to memory optimization",
]

[tool.coverage.run]
source = ["tool_router", "service_manager", "dribbble_mcp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "*/__main__.py",
    "tool_router/server.py",
    "tool_router/gateway_client.py",
    "tool_router/scoring.py",
    "tool_router/simple_server.py",
    "tool_router/http_server.py",
    "tool_router/core/server.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 1

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["tool_router", "dribbble_mcp"]

[tool.ruff.lint]
# Enable comprehensive rule sets (similar to TypeScript strict mode)
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    # "I",    # isort (disabled: conflicts with black formatting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that may be too strict or conflict with project style
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "S101",    # Use of assert detected (pytest uses assert)
    "PLR2004", # Magic value used in comparison
    "S310",    # Audit URL open (urllib is used intentionally for HTTP requests)
    "B904",    # raise from err (not always needed for simple error wrapping)
    "G004",    # Logging f-strings (acceptable for structured logging)
    "TRY401",  # Redundant exception in logging.exception (intentional for clarity)
    "TRY400",  # Use logging.exception instead of logging.error (style preference)
    "TRY300",  # Consider moving to else block (style suggestion)
    "TRY003",  # Raise vanilla args (style preference)
    "TRY301",  # Raise within try (style preference)
    "DTZ003",  # datetime.utcnow() (deprecation, not a bug)
    "DTZ005",  # datetime.now() without tz (non-critical)
    "PTH118",  # os.path.join → pathlib (style preference)
    "PTH120",  # os.path.dirname → pathlib (style preference)
    "PTH123",  # open() → Path.open() (style preference)
    "PTH107",  # os.remove → Path.unlink (style preference)
    "PTH110",  # os.path.exists → Path.exists (style preference)
    "PLC0415", # Import outside top level (conditional imports are intentional)
    "TID252",  # Relative imports (project uses both styles)
    "ARG001",  # Unused function argument (common in handlers/callbacks)
    "ARG002",  # Unused method argument (common in OOP/handlers)
    "EM101",   # Raw string in exception (acceptable for clarity)
    "EM102",   # f-string in exception (acceptable for clarity)
    "RET504",  # Unnecessary assignment before return (readability preference)
    "PLR0913", # Too many function arguments (complex constructors)
    "PLR0911", # Too many return statements (complex parsing functions)
    "PLR0912", # Too many branches (complex logic)
    "PLR0915", # Too many statements (complex functions)
    "PLW0603", # Global statement (used intentionally)
    "S108",    # Hardcoded temp file (development paths)
    "S110",    # try-except-pass (intentional error suppression)
    "PLE1205", # Logging too many args (false positive with structured logging)
    "ERA001",  # Commented out code (kept for reference)
    # RUF059 omitted: not available in ruff <0.9
    "BLE001",  # Blind exception catches (defensive error handling pattern)
    "T201",    # print() found (used in CLI scripts and debugging)
    "F841",    # Local variable assigned but never used (common pattern)
    "F821",    # Undefined name (forward references and conditional imports)
    "F811",    # Redefined while unused (intentional overrides)
    "B007",    # Unused loop control variable (common iteration pattern)
    "SIM118",  # Use key in dict (style preference)
    "SIM105",  # Use contextlib.suppress (style preference)
    "B011",    # Do not assert False (used in tests)
    "PT015",   # pytest assert always false (test patterns)
    "PT018",   # pytest composite assertion (test patterns)
    "RUF013",  # Implicit Optional (PEP 484 style)
    "A002",    # Builtin argument shadowing (common parameter names)
    "B008",    # Function call in default argument (intentional patterns)
    "C401",    # Unnecessary generator set (readability preference)
    "S105",    # Hardcoded password string (test/dev configurations)
    "S104",    # Hardcoded bind all interfaces (server configurations)
    "S106",    # Hardcoded password func arg (test configurations)
    "S301",    # Suspicious pickle usage (pre-existing serialization)
    "E501",    # Line too long (handled by formatter, 120 char limit)
    "E402",    # Module import not at top of file (conditional imports)
    "E712",    # True/false comparison (style preference)
    "E721",    # Type comparison (style preference)
    "E722",    # Bare except (handled by BLE001)
    "B905",    # Zip without explicit strict (Python 3.10+ feature)
    "C416",    # Unnecessary comprehension (style preference)
    "F823",    # Undefined local (pre-existing forward refs)
    "PGH003",  # Blanket type-ignore (pre-existing)
    "PLW2901", # Redefined loop variable (intentional reassignment)
    "RUF001",  # Ambiguous unicode character (pre-existing)
    "RUF005",  # Collection literal concatenation (style preference)
    "RUF022",  # Unsorted __all__ (style preference)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__.py
"tool_router/tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ANN",     # Don't require type hints in tests
    "PLR2004", # Allow magic values in tests
    "ARG",     # Allow unused arguments in test fixtures
    "SIM117",  # Allow nested with statements in tests
    "PT011",   # Allow broad exception types in pytest.raises
    "B017",    # Allow asserting on Exception in tests
    "PLC0415", # Allow imports inside test functions
]
"dribbble_mcp/health_check.py" = [
    "S607",    # Partial executable path (pgrep is intentional)
]
"dribbble_mcp/tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ANN",     # Don't require type hints in tests
    "PLR2004", # Allow magic values in tests
    "ARG",     # Allow unused arguments in test fixtures
    "SIM117",  # Allow nested with statements in tests
    "PT011",   # Allow broad exception types in pytest.raises
    "B017",    # Allow asserting on Exception in tests
    "PLC0415", # Allow imports inside test functions
    "PT006",   # Allow @pytest.fixture() with parens
]
"tool_router/test_*.py" = [
    "S101",    # Allow assert in tests
    "ANN",     # Don't require type hints in tests
    "SIM117",  # Allow nested with statements in tests
]
"tool_router/test_server.py" = [
    "N802",    # BaseHTTPRequestHandler overrides require do_GET naming
]
"tool_router/simple_server.py" = [
    "N802",    # BaseHTTPRequestHandler overrides require do_GET naming
]
"tool_router/server.py" = [
    "PLR0911", # Allow more return statements in main routing function
    "E501",    # Allow long lines in docstrings
]
"tool_router/core/server.py" = [
    "PLR0911", # Allow more return statements in main routing function
    "E501",    # Allow long lines in docstrings
]
"tool_router/gateway/client.py" = [
    "PLC0415", # Allow conditional imports for backward compatibility
    "E501",    # Allow long lines in list comprehensions
]
"tool_router/gateway_client.py" = [
    "PLC0415", # Allow conditional imports
]
"tool_router/scoring/matcher.py" = [
    "E501",    # Allow long lines in scoring calculations
]
"tool_router/ai/prompts.py" = [
    "E501",    # Allow long lines in prompt template strings
]
"tool_router/ai/selector.py" = [
    "PLR0911", # Allow more return statements in AI response parsing functions
]
"tool_router/tests/test_ai_selector.py" = [
    "E501",    # Allow long lines in test fixture strings
]
"tool_router/training/**/*.py" = [
    "T201",    # print statements used for CLI output
    "BLE001",  # blind exception catches in pipeline error handling
    "DTZ005",  # datetime.now() without tz (non-critical training code)
    "TRY300",  # try-consider-else
    "TRY400",  # logging.error vs logging.exception
    "F821",    # undefined names (training code in development)
    "PLR0911", # too many return statements
    "SIM108",  # ternary operator suggestions
    "SIM118",  # dict key iteration style
    "PLC0206", # dict index missing items
    "C401",    # unnecessary generator
    "F841",    # unused variable
    "E501",    # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["tool_router", "dribbble_mcp"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
